--- a/index.html
+++ b/index.html
@@ -383,7 +383,8 @@
             <div class="footerContent">© 2006-2017 &nbsp;The Metcalfe Group, Inc. &nbsp;All rights reserved.</div>
         </div>
     </div>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/jquery-migrate-3.0.0.min.js"></script>
     <script src="js/tinynav.min.js"></script>
     <script type='text/javascript' src='js/jquery.flexslider.min.js%3Fver=2.2.0-20121206'></script>
     <script type='text/javascript' src='js/jquery.fitvids.js%3Fver=2.1.0-20121206'></script>
