remove unused styles, bug fix

--- a/about-us/company/index.html
+++ b/about-us/company/index.html
@@ -17,8 +17,9 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <link rel="stylesheet" href="../../css/style.css" type="text/css"  />   
-    <link rel='stylesheet' id='gforms_formsmain_css-css'  href='../../css/formsmain.css%3Fver=1.8.22.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='gforms_ready_class_css-css'  href='../../css/readyclass.css%3Fver=1.8.22.css' type='text/css' media='all' /> 
+    <link rel='stylesheet' id='gforms_formsmain_css-css'  href='../../css/formsmain.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='gforms_ready_class_css-css'  href='../../css/readyclass.css' type='text/css' media='all' /> 
+    <link rel="stylesheet" href="../../css/bug-fix.css" />
     <meta name='description' content='Located just southeast of Cleveland, OH, we are a full-service product design and development firm with over 12 years of experience.' />
     <meta name='keywords' content='Cleveland, Solon, OH, full-service, product design and development, experienced firm' />
 </head>
