--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="../images/favicon.ico">
     <link rel="icon" type="image/png" href="../images/favicon32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="../images/favicon16.png" sizes="16x16">
-    <script type="text/javascript" src="http://use.typekit.net/hut0qku.js"></script>
+    <script type="text/javascript" src="../js/hut0qku.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <link rel="stylesheet" href="../css/style.css" type="text/css"  />
