--- a/about-us/company/index.html
+++ b/about-us/company/index.html
@@ -37,50 +37,8 @@
                         <li>
                             <a href="../../index.html">Home</a>
                         </li>
-                        <li>
-                            <a href="javascript:void(0);">Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="javascript:void(0);">Services</a>
-                            <ul>
-                                <li>
-                                    <a href="javascript:void(0);">Research</a></li>
-                                <li>
-                                    <a href="javascript:void(0);">Product Design</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0);">Engineering</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0);">Prototyping</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0);">Testing</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0);">Additional Support</a>
-                                </li>
-                            </ul>
-                        </li>
                         <li class="current_page_item">
                             <a href="index.html">About Us</a>
-                            <ul>
-                                <li class="current_page_item">
-                                    <a href="index.html">Company</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0);">Facility</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0);">Process</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0);">Clients</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0);">Testimonials</a>
-                                </li>
-                            </ul>
                         </li>
                         <li>
                             <a href="../../contact/index.html">Contact</a>
@@ -110,20 +68,14 @@
                 <div id="sbNav">
                     <h2>About Us</h2>
                     <ul id="navSub">
+                        <li>
+                            <a href="../../index.html">Home</a>
+                        </li>
                         <li class="current_page_item">
-                            <a href="index.html">Company</a>
+                            <a href="index.html">About Us</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0);">Facility</a>
-                        </li>
-                        <li>
-                            <a href="javascript:void(0);">Process</a>
-                        </li>
-                        <li>
-                            <a href="javascript:void(0);">Clients</a>
-                        </li>
-                        <li>
-                            <a href="javascript:void(0);">Testimonials</a>
+                            <a href="../../contact/index.html">Contact</a>
                         </li>
                     </ul>
                 </div>
