--- a/about-us/company/index.html
+++ b/about-us/company/index.html
@@ -93,9 +93,9 @@
                     <p>Paul R. Metcalfe<br /><em>President, Founder</em></p>
      			</div>
                 <div id="bottomNav">
-                    <div class="bN_item next">
+                    <!-- <div class="bN_item next">
                         <a href="javascript:void(0);" class="my-next">Facility</a>
-                    </div>
+                    </div> -->
                     <div class="bN_item top">
                         <a href="#top" class="btt">Back to Top</a>
                     </div>
