--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </div>
         <div class="clearall"></div>
     </div>
-    <!-- <div id="slider">
-        <div id="homeSlider">
+    <div id="slider">
+       <!--  <div id="homeSlider">
             <div id="wooslider-id-1" class="wooslider wooslider-id-1 wooslider-type-slides wooslider-theme-default">
                 <ul class="slides">
                     <li class="slide">
@@ -91,8 +91,8 @@
                     </li>
                 </ul>
             </div>
-        </div>
-    </div> -->
+        </div> -->
+    </div>
     <div id="body">
         <div id="subhead">
             <h1>Looking Ahead. Going Beyond. <span class="gold">Making It Real.</span><span style="color: #9d9d9d;"><span style="font-weight: 300;">™</span></span></h1>
